# FunOs

./: CMakeLists.txt  Makefile  Makefile_old  README.md
docs/: README.md
docs/learning/x86/: ata.md  bios.md  bootloader.md  interrupts.md  io_port.md  memory.md  mmu.md  pci.md  pic.md  protected_mode.md  real_mode.md  registers.md  text_mode.md
docs/x86/: boot.md  display.md  kernel_startup.md  memory.md
src/: boot_loader.asm  data.asm  linker-debug.ld  linker.ld
src/x86/: config.c  config.h  kernel.asm  kernel.c  kernel.cpp  kernel.h  status.h
src/x86/boot/: boot_loader.asm
src/x86/disk/: disk.c  disk.cpp  disk.h
src/x86/heap/: heap.c  heap.cpp  heap.h  kheap.c  kheap.cpp  kheap.h
src/x86/idt/: idt.asm  idt.c  idt.cpp  idt.h
src/x86/io/: io.asm  io.c  io.cpp  io.h
src/x86/memory/: kpaging.c  kpaging.cpp  kpaging.h  memory.c  memory.cpp  memory.h  paging.asm  paging.c  paging.cpp  paging.h
src/x86/terminal/: print.c  print.cpp  print.h
src/x86_64/boot/: header.asm
targets/x86_64/iso/boot/grub/: grub.cfg
